[gd_scene load_steps=7 format=3 uid="uid://3s1ri75omq2p"]

[ext_resource type="PackedScene" uid="uid://4u3j5o4orug4" path="res://bird.tscn" id="1_ir62d"]
[ext_resource type="Script" path="res://main.gd" id="1_r30sg"]
[ext_resource type="Script" path="res://block.gd" id="3_0vy35"]
[ext_resource type="Texture2D" uid="uid://bghv5gi70ofx5" path="res://image/dokan.png" id="4_nar4j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vjnnt"]
size = Vector2(175, 590)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tirlk"]

[node name="Main" type="Node"]
script = ExtResource("1_r30sg")

[node name="Block" type="StaticBody2D" parent="." groups=["Blocks"]]
position = Vector2(627, -1)
script = ExtResource("3_0vy35")
metadata/_edit_group_ = true

[node name="UpperWallImage" type="Sprite2D" parent="Block"]
texture = ExtResource("4_nar4j")

[node name="UpperWallColl" type="CollisionShape2D" parent="Block"]
shape = SubResource("RectangleShape2D_vjnnt")

[node name="LowWallImage" type="Sprite2D" parent="Block"]
position = Vector2(0, 800)
texture = ExtResource("4_nar4j")

[node name="LowWallColl" type="CollisionShape2D" parent="Block"]
position = Vector2(0, 800)
shape = SubResource("RectangleShape2D_vjnnt")

[node name="PointArea" type="Area2D" parent="Block"]
position = Vector2(0, 400)
monitorable = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block/PointArea"]
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_tirlk")
one_way_collision_margin = 0.0

[node name="Bird" parent="." instance=ExtResource("1_ir62d")]
position = Vector2(236, 336)
collision_layer = 1
collision_mask = 1

[node name="Wall" type="StaticBody2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall"]
polygon = PackedVector2Array(-6, -3, -1, -91, 1386, -91, 1386, 789, -1, 787, -3, 720, 1278, 720, 1278, -1)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 141.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="HUD/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 30
text = "11111"

[connection signal="tree_exiting" from="Block" to="." method="_on_block_tree_exiting"]
[connection signal="body_exited" from="Block/PointArea" to="." method="_on_point_area_body_exited"]
